src/objects/loan__Disbursal_Txn_Distribution__c.object
<CustomObject>
    <fields>
        <fullName>loan__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Disbursal Transaction Distributions</relationshipLabel>
        <relationshipName>Txn_Distribution_Bank_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Distribution_Amount__c</fullName>
        <label>Distribution Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Distribution_Type__c</fullName>
        <label>Distribution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Disbursement</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Refinance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Paid Fee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Disbursal_Transaction__c</fullName>
        <label>Loan Disbursal Transaction</label>
        <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipLabel>Disbursal Transaction Distributions</relationshipLabel>
        <relationshipName>Disbursal_Transaction_Distribution</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Name_of_Entity__c</fullName>
        <inlineHelpText>Name of Entity</inlineHelpText>
        <label>Name of Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reference__c</fullName>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked, if the parent disbursal transaction is reversed or rejected.</inlineHelpText>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH_On__c</fullName>
        <inlineHelpText>Date when the disbursal distribution was sent for ACH Processing</inlineHelpText>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ticked, when the disbursal distribution is processed by the ACH file generation</inlineHelpText>
        <label>Sent To ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Source_Record_ID__c</fullName>
        <inlineHelpText>Id of Pre-Paid Fee record and Refinance Transaction record is stored in their respective distributions. This field is blank for &apos;Disbursement&apos; Type distributions.</inlineHelpText>
        <label>Source Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Source_Record_Name__c</fullName>
        <label>Source Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Disbursal Transaction Distribution</label>
    <nameField>
        <displayFormat>DDI-{0000000000}</displayFormat>
        <label>Disbursal Distribution ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursal Transaction Distributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>